--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -68,7 +68,7 @@ jobs:
         if: github.ref == 'refs/heads/main'
         env:
           APIKEY: ${{ secrets.NAIS_DEPLOY_APIKEY }}
-          CLUSTER: prod-gcp
+          CLUSTER: labs-gcp
           RESOURCE: .nais/nais.yaml
           VARS: .nais/labs-gcp.yaml
           IMAGE: ${{ steps.dockertag.outputs.docker_img }}
